# crewai-multi-agents

./: pyproject.toml  requirements.txt
src/crewai_multi_agents/: crew.py  main.py
src/crewai_multi_agents/config/: agents.yaml  tasks.yaml
