[project]
name = "crewai_multi_agents"
version = "0.1.0"
description = "crewai-multi-agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.0,<1.0.0"
]

[project.scripts]
crewai_multi_agents = "crewai_multi_agents.main:run"
run_crew = "crewai_multi_agents.main:run"
train = "crewai_multi_agents.main:train"
replay = "crewai_multi_agents.main:replay"
test = "crewai_multi_agents.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
